--- a/portofolio/package.json
+++ b/portofolio/package.json
@@ -18,7 +18,8 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "swiper": "^12.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
